--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -5,3 +5,10 @@ gbcl-userip:
   admin:
     permissions:
       view_ip_info_label: Display IP Info
+
+    service:
+      label: Service
+
+      ipsb:
+        label: IP.SB
+        description: Use <b>https://ip.sb</b> to get free IP location information (please note the rate limit)
