--- a/resources/locale/zh-Hans.yml
+++ b/resources/locale/zh-Hans.yml
@@ -5,3 +5,10 @@ gbcl-userip:
   admin:
     permissions:
       view_ip_info_label: 显示 IP 属地信息
+
+    service:
+      label: 服务
+
+      ipsb:
+        label: IP.SB
+        description: 使用 <b>https://ip.sb</b> 获取免费的 IP 属地信息 （速率限制注意）
