--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -8,6 +8,8 @@ gbcl-userip:
 
     service:
       label: Service
+      badgeOptionsLabel: Badge Options
+      hoverOptionsLabel: Hover Options
 
       ipsb:
         label: IP.SB
@@ -16,3 +18,12 @@ gbcl-userip:
       ovincApi:
         label: Ovinc Inner Api
         description: Inner Api for Customer
+        
+        areaCode: Area Code
+        backboneIsp: Backbone ISP
+        district: District
+        province: Province
+        isp: ISP
+        countryCode: Country Code
+        region: Region
+        city: City
