--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -12,3 +12,8 @@ gbcl-userip:
       ipsb:
         label: IP.SB
         description: Use <b>https://ip.sb</b> to get free IP location information (please note the rate limit)
+        
+      ipinfo:
+        label: IpInfo
+        description: Use <b>https://ipinfo.io</b> to get more accurate IP information (token required)
+        key: IpInfo Token(Required)
