--- a/resources/locale/zh-Hans.yml
+++ b/resources/locale/zh-Hans.yml
@@ -12,3 +12,8 @@ gbcl-userip:
       ipsb:
         label: IP.SB
         description: 使用 <b>https://ip.sb</b> 获取免费的 IP 属地信息 （速率限制注意）
+        
+      ipinfo:
+          label: IpInfo
+          description: 使用 <b>https://ipinfo.io</b> 获取更为精确的 IP 属地信息 （需要 token）
+          key: IpInfo Token（必填）
